# mp-real

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: no-hardware-ci.yml
configs/: rm2.env.example
docs/: control_step_recording_semantics.md  data_migration_notes.md  evaluation_refactor_plan.md  hardening_audit.md  hardware_validation_h1.md  hardware_validation_h2.md  hardware_validation_h4.md  hardware_validation_h5.md  hardware_validation_stage_10.md  hardware_validation_stage_7.md  hardware_validation_stage_9.md  known_limitations.md  piper_rm2_generality_audit.md  piper_safety_profile.md  plan_integrity.md  recorder_memory_model.md  replay_feedback_semantics.md  rm2_safety_profile.md  robot_capability_matrix.md  robot_replay_safety.md  validation_stage_11.md
docs/en/: README.md  baseline_workflow.md  current_architecture.md  evaluation_refactor_plan.md  evaluation_workflow.md  hardware_validation_piper.md  hardware_validation_rm2.md  hardware_validation_stage_12_piper.md  hardware_validation_stage_12_rm2.md  hardware_validation_stage_6.md  known_limitations.md  lerobot_v21_schema.md  migration_notes.md  move_to_recorded_state.md  offline_data_view.md  open_loop_evaluation.md  piper_rm2_generality_audit.md  robot_capability_matrix.md  robot_replay_safety.md  validation_stage_8.md
docs/zh/: AGENTS.md  README.md  baseline_workflow.md  current_architecture.md  evaluation_refactor_plan.md  evaluation_workflow.md  hardware_validation_piper.md  hardware_validation_rm2.md  hardware_validation_stage_10.md  hardware_validation_stage_12_piper.md  hardware_validation_stage_12_rm2.md  hardware_validation_stage_6.md  hardware_validation_stage_7.md  hardware_validation_stage_9.md  known_limitations.md  lerobot_v21_schema.md  migration_notes.md  move_to_recorded_state.md  offline_data_view.md  open_loop_evaluation.md  piper_rm2_generality_audit.md  robot_capability_matrix.md  robot_replay_safety.md  validation_stage_11.md  validation_stage_8.md
scripts/: bootstrap-piper.sh  fix_lerobot_static_left_arm.py  recorder_soak.py  reencode_lerobot_videos.py
src/mp_real/: __init__.py
src/mp_real/common/: __init__.py  camera.py  image.py  plan_integrity.py  runtime.py
src/mp_real/data/: __init__.py  audit.py  catalog.py  cli.py  constants.py  deps.py  lerobot_v21.py  models.py  pose.py  view.py  view_server.py
src/mp_real/evaluation/: __init__.py  metrics.py  models.py  service.py  (+2 more)
static/: app.js  data_view.css  data_view.html  data_view.js  index.html  style.css
tests/: test_baseline.py  test_controller.py  test_data_view.py  test_evaluation.py  test_events.py  test_h6_optional_docs.py  test_hardening_audit.py  test_lerobot_v21.py  test_open_loop.py  test_pose.py  test_replay.py  test_rm2_async_gripper.py  test_rm2_verified_profile.py  test_runtime.py  test_safety_h4.py  test_web_evaluation.py  test_web_profiles.py  test_web_runtime.py
(+57 files in other folders)
